# vendas-cli

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
data_test/: vendas.csv  vendas1.csv  vendas2.csv
tests/: conftest.py  test_cli.py  test_core.py  test_helpers.py  test_helpers_validate_data.py  test_output.py  test_parser.py
tests/mocks/: fake_pandera_model.py
vendas_cli/: __init__.py  cli.py  core.py  helpers.py  logger.py  output.py  parser.py  schemas.py  typing.py
vendas_cli/validators/: validation.py
